--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,10 @@
+body {
+	background-color: #00CCCC;
+	color: white;
+/*	font-family: Futura;*/
+  @import url(http://fonts.googleapis.com/css?family=Signika+Negative:300,400,600,700);
+	font-family: 'Signika Negative', sans-serif;
+}
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
