--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,6 +5,25 @@ body {
   @import url(http://fonts.googleapis.com/css?family=Signika+Negative:300,400,600,700);
 	font-family: 'Signika Negative', sans-serif;
 }
+
+#errorExplanation {
+	width: 50%;
+	padding-top: 1px;
+	padding-bottom: 5px;
+	padding-right: 10px;
+	padding-left: 10px;
+	margin:10px;
+	background-color: white;
+	border-radius: 15px;
+	color: #E2492F;
+	text-shadow: 0 0 3.4em #fff;
+  text-shadow: 0 0 1.5em #fff, 0 0 1.5em #fff;
+}
+/*
+.field_with_errors {
+  background-color: black;
+}
+*/
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
